<resources>
    <string name="app_name">WeatherKotlin</string>
    <string name="search_failed">Retrieving search results failed</string>
    <string name="find_your_city">Find your city…</string>
    <string name="click_on_the_map_to_see_weather_for_that_location">Click on the map to see weather for that location.</string>
    <string name="map">Map</string>
    <string name="permission_needed">Location Permission Needed</string>
    <string name="permission_needed_description">This app needs the Location permission, please accept to use location functionality</string>
    <string name="state">State</string>
    <string name="weather_failed">Retrieving weather failed.</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="predictability">Predictability</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="wind">Wind</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="permission_denied">Permission denied</string>
    <string name="location_not_found">Location not found</string>
</resources>